--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ body {
   width: 340px;
   height: 165px;
   margin: auto;
-  font-size: 50px;
-  padding: 20px;
+  font-size: 60px;
+  padding: 40px;
   color: white;
   text-align: right;
 }
@@ -48,7 +48,30 @@ body {
   font-size: 35px;
 }
 .button button:hover {
- opacity: 0.5;
- cursor: pointer;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.key-ac button,
+.key-pm button,
+.key-percent button {
+  background-color: #a5a5a5;
+  color: black;
 }
 
+.key-divison button,
+.key-multiplication button,
+.key-subtraction button,
+.key-addition button {
+  background-color: #f1a33c;
+}
+.calculator-keys .key-0 {
+  grid-row: 5/6;
+  grid-column: 1/3;
+}
+.calculator-keys .key-0 button {
+  width: 160px;
+  height: 72px;
+  border-radius: 36px;
+  text-align: left;
+  padding-left: 25px;
+}
